<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".CrunchTimeActivity"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="start"
        android:gravity="top">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                android:layout_gravity="center"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/calorie_title"
                android:textSize="30sp"
                android:text="@string/calorie_title"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="23sp"
                android:text="@string/exercise_text"
                android:layout_marginTop="@dimen/activity_vertical_margin"/>

            <Spinner
                android:layout_width="150sp"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:id="@+id/exercise_spinner"
                android:spinnerMode="dropdown"
                android:focusable="false"
                android:clickable="false"
                android:layout_gravity="center" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_exercise"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textSize="21sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:inputType="numberDecimal"
                android:id="@+id/input_textbox"
                android:enabled="true"
                android:text=""
                android:textAlignment="center"
                android:hint="Enter number here"
                android:selectAllOnFocus="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

            <Spinner
                android:layout_width="150sp"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:id="@+id/unit_spinner"
                android:spinnerMode="dropdown"
                android:focusable="false"
                android:clickable="false"
                android:layout_gravity="center"/>

        </LinearLayout>

        <Button
            android:id="@+id/convert_button"
            android:text="@string/convert_button"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_gravity="center"
            android:onClick="convertCalories"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/calorie_result"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_gravity="center"
            android:textSize="26sp"
            android:gravity="center"
            android:textIsSelectable="false"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/compare_title"
                android:textSize="23sp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/activity_vertical_margin" />

            <Spinner
                android:layout_width="150sp"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:id="@+id/compare_spinner"
                android:spinnerMode="dropdown"
                android:focusable="false"
                android:clickable="false"
                android:layout_gravity="center"/>

        </LinearLayout>

        <Button
            android:id="@+id/calculate_button"
            android:text="@string/calculate_button"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="calculateExercise"/>
    </LinearLayout>

    <TextView
        android:id="@+id/calculate_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textSize="22sp"
        android:layout_gravity="center"/>

</LinearLayout>

